{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 87,
  "lineage": "a0d7de32-3727-37ef-4ac1-dfb798fbe081",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0defaaff494401872",
            "association_id": "eipassoc-0cf82c688ee8e5af7",
            "domain": "vpc",
            "id": "eipalloc-0defaaff494401872",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0659985e9c3b1c85c",
            "private_dns": "ip-10-0-1-126.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-13-210-107-60.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.107.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ngw_ip_1"
            },
            "tags_all": {
              "Name": "ngw_ip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042e365be14f0552e",
            "association_id": "eipassoc-042d59a604a9a1fe5",
            "domain": "vpc",
            "id": "eipalloc-042e365be14f0552e",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0bfcc10a100538294",
            "private_dns": "ip-10-0-2-8.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.8",
            "public_dns": "ec2-54-79-189-82.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.189.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ngw_ip_2"
            },
            "tags_all": {
              "Name": "ngw_ip_2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:internet-gateway/igw-078a7af61ef9f42c5",
            "id": "igw-078a7af61ef9f42c5",
            "owner_id": "209665464430",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:loadbalancer/app/apptier-lb/ee96f0b298d7fab3",
            "arn_suffix": "app/apptier-lb/ee96f0b298d7fab3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-apptier-lb-388998158.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:loadbalancer/app/apptier-lb/ee96f0b298d7fab3",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apptier-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05cc8e596c092cf6f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02117836f892c0034"
              },
              {
                "subnet_id": "subnet-0976125db42731ebf"
              }
            ],
            "subnets": [
              "subnet-02117836f892c0034",
              "subnet-0976125db42731ebf"
            ],
            "vpc_id": "vpc-0fb8a1dcd9f06e570",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb_apptier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:loadbalancer/app/frontend-lb/6880e4cc9f1ee7b7",
            "arn_suffix": "app/frontend-lb/6880e4cc9f1ee7b7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-lb-1961397244.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:loadbalancer/app/frontend-lb/6880e4cc9f1ee7b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e6363ba0bf5af4e4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01338ad82b674f478"
              },
              {
                "subnet_id": "subnet-0d9182b55ea5a0972"
              }
            ],
            "subnets": [
              "subnet-01338ad82b674f478",
              "subnet-0d9182b55ea5a0972"
            ],
            "vpc_id": "vpc-0fb8a1dcd9f06e570",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb_webtier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:listener/app/apptier-lb/ee96f0b298d7fab3/aab9651659132a68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:targetgroup/lb-apptier-target/71da01fd872eb7e5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:listener/app/apptier-lb/ee96f0b298d7fab3/aab9651659132a68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:loadbalancer/app/apptier-lb/ee96f0b298d7fab3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.apptier",
            "aws_lb_target_group.apptier",
            "aws_security_group.alb_apptier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:listener/app/frontend-lb/6880e4cc9f1ee7b7/8c3b6fa89a374260",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:targetgroup/lb-frontend-target/fd4be4c27d1cbb96",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:listener/app/frontend-lb/6880e4cc9f1ee7b7/8c3b6fa89a374260",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:loadbalancer/app/frontend-lb/6880e4cc9f1ee7b7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb_webtier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:targetgroup/lb-apptier-target/71da01fd872eb7e5",
            "arn_suffix": "targetgroup/lb-apptier-target/71da01fd872eb7e5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:targetgroup/lb-apptier-target/71da01fd872eb7e5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-apptier-target",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:targetgroup/lb-frontend-target/fd4be4c27d1cbb96",
            "arn_suffix": "targetgroup/lb-frontend-target/fd4be4c27d1cbb96",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:209665464430:targetgroup/lb-frontend-target/fd4be4c27d1cbb96",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-frontend-target",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0defaaff494401872",
            "connectivity_type": "public",
            "id": "nat-03d107c9431967737",
            "network_interface_id": "eni-0659985e9c3b1c85c",
            "private_ip": "10.0.1.126",
            "public_ip": "13.210.107.60",
            "subnet_id": "subnet-01338ad82b674f478",
            "tags": {
              "Name": "ngw_1"
            },
            "tags_all": {
              "Name": "ngw_1"
            }
          },
          "dependencies": [
            "aws_eip.ngw_ip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042e365be14f0552e",
            "connectivity_type": "public",
            "id": "nat-00023b4474d40a0b8",
            "network_interface_id": "eni-0bfcc10a100538294",
            "private_ip": "10.0.2.8",
            "public_ip": "54.79.189.82",
            "subnet_id": "subnet-0d9182b55ea5a0972",
            "tags": {
              "Name": "ngw_2"
            },
            "tags_all": {
              "Name": "ngw_2"
            }
          },
          "dependencies": [
            "aws_eip.ngw_ip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:route-table/rtb-010da8e1ecb7807a0",
            "id": "rtb-010da8e1ecb7807a0",
            "owner_id": "209665464430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d107c9431967737",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_1"
            },
            "tags_all": {
              "Name": "private_route_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:route-table/rtb-08afe2b46402cbeb3",
            "id": "rtb-08afe2b46402cbeb3",
            "owner_id": "209665464430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00023b4474d40a0b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:route-table/rtb-0e92420f01d8cc078",
            "id": "rtb-0e92420f01d8cc078",
            "owner_id": "209665464430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078a7af61ef9f42c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062dd140acd796103",
            "route_table_id": "rtb-010da8e1ecb7807a0",
            "subnet_id": "subnet-0976125db42731ebf"
          },
          "dependencies": [
            "aws_eip.ngw_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b8d16787cd5fbc4",
            "route_table_id": "rtb-08afe2b46402cbeb3",
            "subnet_id": "subnet-02117836f892c0034"
          },
          "dependencies": [
            "aws_eip.ngw_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07832db4cb56437fb",
            "route_table_id": "rtb-0e92420f01d8cc078",
            "subnet_id": "subnet-01338ad82b674f478"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cebeed82da65772a",
            "route_table_id": "rtb-0e92420f01d8cc078",
            "subnet_id": "subnet-0d9182b55ea5a0972"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:security-group/sg-05cc8e596c092cf6f",
            "description": "allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cc8e596c092cf6f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_alb_apptier",
            "name_prefix": "",
            "owner_id": "209665464430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_apptier_sg"
            },
            "tags_all": {
              "Name": "alb_apptier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_webtier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:security-group/sg-0e6363ba0bf5af4e4",
            "description": "allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6363ba0bf5af4e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "connection to alb_webtier",
            "name_prefix": "",
            "owner_id": "209665464430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_webtier_sg"
            },
            "tags_all": {
              "Name": "alb_webtier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:security-group/sg-0306bdda3c898a96a",
            "description": "allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0306bdda3c898a96a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_apptier",
            "name_prefix": "",
            "owner_id": "209665464430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apptier_sg"
            },
            "tags_all": {
              "Name": "apptier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:security-group/sg-03f3d0f078888219d",
            "description": "allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f3d0f078888219d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6363ba0bf5af4e4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6363ba0bf5af4e4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "connection for webtier",
            "name_prefix": "",
            "owner_id": "209665464430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webtier_sg"
            },
            "tags_all": {
              "Name": "webtier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_webtier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:subnet/subnet-0976125db42731ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0976125db42731ebf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209665464430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets_1"
            },
            "tags_all": {
              "Name": "private_subnets_1"
            },
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:subnet/subnet-02117836f892c0034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02117836f892c0034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209665464430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets_2"
            },
            "tags_all": {
              "Name": "private_subnets_2"
            },
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:subnet/subnet-01338ad82b674f478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01338ad82b674f478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209665464430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets_1"
            },
            "tags_all": {
              "Name": "public_subnets_1"
            },
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:subnet/subnet-0d9182b55ea5a0972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9182b55ea5a0972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209665464430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets_2"
            },
            "tags_all": {
              "Name": "public_subnets_2"
            },
            "vpc_id": "vpc-0fb8a1dcd9f06e570"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:209665464430:vpc/vpc-0fb8a1dcd9f06e570",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c18c87b83673d2a9",
            "default_route_table_id": "rtb-0676d3be20c5436b3",
            "default_security_group_id": "sg-089b34583edf1a05f",
            "dhcp_options_id": "dopt-04efa6b1f60c6c220",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fb8a1dcd9f06e570",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0676d3be20c5436b3",
            "owner_id": "209665464430",
            "tags": {
              "Name": "P3_backend"
            },
            "tags_all": {
              "Name": "P3_backend"
            }
          }
        }
      ]
    }
  ]
}